remocao borda imagem carteirinha e ficha cadastral

--- a/reportCarteirinha.rdlc
+++ b/reportCarteirinha.rdlc
@@ -759,7 +759,7 @@
             <ZIndex>16</ZIndex>
             <Style>
               <Border>
-                <Style>Solid</Style>
+                <Style>None</Style>
               </Border>
             </Style>
           </Image>
